--- a/examples/timeline/web/index.html
+++ b/examples/timeline/web/index.html
@@ -5,18 +5,30 @@
     <title>React • TodoMVC</title>
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="http://code.jquery.com/qunit/qunit-1.15.0.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 </head>
 <body>
-<section id="todoapp"></section>
+<div id="qunit"></div>
+<div id="qunit-fixture"></div>
+<script src="http://code.jquery.com/qunit/qunit-1.15.0.js"></script>
+<section id="timelineApp"></section>
 <footer id="info">
     <p>Double-click to edit a todo</p>
     <p>Created by <a href="http://github.com/bbodi/">bbodi</a></p>
     <p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 </footer>
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+<script src="lib/bootstrap-tagsinput.min.js"></script>
+<script src="lib/moment-with-locales.js"></script>
+<script src="lib/bootstrap-datetimepicker.min.js"></script>
+
 <script src="http://fb.me/react-0.12.2.js"></script>
 <script src="../../../out/artifacts/reakt/lib/kotlin.js"></script>
 <script src="../../../out/artifacts/reakt/reaKt.js"></script>
+
 <!--<script src="node_modules/react/dist/react-with-addons.js"></script>-->
 <!--<script src="node_modules/director/build/director.js"></script>-->
 
