--- a/examples/timeline/web/index.html
+++ b/examples/timeline/web/index.html
@@ -2,9 +2,7 @@
 <html lang="en" data-framework="react">
 <head>
     <meta charset="utf-8">
-    <title>React • TodoMVC</title>
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/index.css">
+    <title>Timeline</title>
     <link rel="stylesheet" href="http://code.jquery.com/qunit/qunit-1.15.0.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 </head>
