template grid, split button, modal

--- a/examples/timeline/web/index.html
+++ b/examples/timeline/web/index.html
@@ -5,6 +5,7 @@
     <title>Timeline</title>
     <link rel="stylesheet" href="http://code.jquery.com/qunit/qunit-1.15.0.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
 </head>
 <body>
 <div id="qunit"></div>
