--- a/web/index.html
+++ b/web/index.html
@@ -1,12 +1,16 @@
 <html>
 <head>
+    <link rel="stylesheet" href="http://code.jquery.com/qunit/qunit-1.15.0.css">
     <title>Hello React</title>
     <script src="http://fb.me/react-0.12.2.js"></script>
     <script src="http://code.jquery.com/jquery-1.10.0.min.js"></script>
     <script src="../out/artifacts/reakt/lib/kotlin.js"></script>
 </head>
 <body>
-<div id="content"></div>
+<div id="qunit"></div>
+<div id="qunit-fixture"></div>
+<script src="http://code.jquery.com/qunit/qunit-1.15.0.js"></script>
+<div id="testContent"></div>
 <script src="../out/artifacts/reakt/reaKt.js"></script>
 
 </body>
