--- a/examples/timeline/web/index.html
+++ b/examples/timeline/web/index.html
@@ -25,7 +25,7 @@
 <script src="lib/moment-with-locales.js"></script>
 <script src="lib/bootstrap-datetimepicker.min.js"></script>
 
-<script src="http://fb.me/react-0.12.2.js"></script>
+<script src="http://fb.me/react-with-addons-0.13.1.js"></script>
 <!--<script src="../../../out/artifacts/reakt/lib/kotlin.js"></script>-->
 <!--<script src="../../../out/artifacts/reakt/reaKt.js"></script>-->
 
@@ -44,9 +44,6 @@
         React.render(React.createElement(HelloMessage, {name: "John"}), document.getElementById("q2"));
     });
 </script>
-
-<!--<script src="node_modules/react/dist/react-with-addons.js"></script>-->
-<!--<script src="node_modules/director/build/director.js"></script>-->
 
 
 </body>
